--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>counter</title>
     <link rel="stylesheet" href="./counter.css">
 </head>
 <body>
@@ -29,5 +29,8 @@
         </div>
     </div>
     <script src="./counter.js"></script>
+    <footer>
+        <p>&copy; 2023 Joffrey JOHN AHYEE</p>
+    </footer>
 </body>
 </html>
